--- a/style/main.css
+++ b/style/main.css
@@ -16,6 +16,10 @@ body {
   color: #333333;
   font-family: PingFang SC, Helvetica Neue, Helvetica, sans-serif;
   word-break: break-all;
+  height: calc(100upx+ constant(safe-area-inset-bottom));
+height: calc(100upx + env(safe-area-inset-bottom));
+padding-bottom: constant(safe-area-inset-bottom);
+padding-bottom: env(safe-area-inset-bottom);
 }
 
 view,
